[package]
name = "plotter_backend_text"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
license = "MIT"


[features]
serde-serialize = ["serde"]
default = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-backend = "0.3.2"
plotters = "0.3.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
version-sync = "0.9.4"